front end js project2 update

--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
     
     <div class="container">
         <h1 class="app_name">Counter Using HTML</h1>
-        <span class="number" id="number">Your current count is : 0</span>
+        <span class="number" id="number">Your current count is : {count}</span>
         <hr id ="line">
+        <p id="display-error">error</p>
         <div class="button-panel">
             <button class="subtract" id="subtract">Decrement</button>
             <button class="add" id="add">Increment</button>
